[package]
name = "wall_game"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.2.0"
bevy = {version ="0.15.1", features = ["dynamic_linking","bevy_gltf","webgl2"]}
bevy-tnua = "0.21.0"
bevy-tnua-avian3d = "0.2.0"
# bevy-vfx-bag = "0.2.0"
# bevy_gizmos = "0.15.0"
# bevy_hanabi = "0.14.0"
# bevy_mod_raycast = "0.18.0"
# bevy_reflect = {version = "0.15.0", features = ["smallvec","bevy","uuid","glam"]}
# bevy_render = "0.15.0"